2011-08-02	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1874/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	multiple pthread_rwlock operations that can be done as single shot
	times.
	* psxtmrwlock01/.cvsignore, psxtmrwlock01/Makefile.am,
	psxtmrwlock01/init.c, psxtmrwlock01/psxtmrwlock01.doc: New files.

2011-07-29	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1863/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_barrier_wait - releasing, no preempt
	* psxtmbarrier03/.cvsignore, psxtmbarrier03/Makefile.am,
	psxtmbarrier03/init.c, psxtmbarrier03/psxtmbarrier03.doc: New files.

2011-07-29	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1859/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_barrier_wait - blocking
	* psxtmbarrier02/.cvsignore, psxtmbarrier02/Makefile.am,
	psxtmbarrier02/init.c, psxtmbarrier02/psxtmbarrier02.doc: New files.

2011-07-28	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1859/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_barrier_init and pthread_barrier_destroy.
	* psxtmbarrier01/.cvsignore, psxtmbarrier01/Makefile.am,
	psxtmbarrier01/init.c, psxtmbarrier01/psxtmbarrier01.doc: New files.

2011-07-26	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1852/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	sem_wait - not available, block.
	* psxtmsem03/.cvsignore, psxtmsem03/Makefile.am, psxtmsem03/init.c,
	psxtmsem03/psxtmsem03.doc: New files.

2011-07-26	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1850/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	sem_post - thread waiting, preempt.
	* psxtmsem05/.cvsignore, psxtmsem05/Makefile.am, psxtmsem05/init.c,
	psxtmsem05/psxtmsem05.doc: New files.

2011-07-26	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1849/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	sem_post - thread waiting, no preempt.