@@ -93,7 +93,8 @@ psxtmmutex06/Makefile
 psxtmmutex07/Makefile
 psxtmnanosleep01/Makefile
 psxtmnanosleep02/Makefile
-psxtmrwlock01//Makefile
+psxtmrwlock01/Makefile
+psxtmrwlock02/Makefile
 psxtmsem01/Makefile
 psxtmsem02/Makefile
 psxtmsem03/Makefile
