@@ -66,7 +66,7 @@
 "pthread_rwlock_init","psxtmrwlock01","psxtmtest_init_destroy","Yes"
 "pthread_rwlock_destroy","psxtmrwlock01","psxtmtest_init_destroy","Yes"
 "pthread_rwlock_rdlock - available","psxtmrwlock01","psxtmtest_single","Yes"
-"pthread_rwlock_rdlock - not available, blocks",,"psxtmtest_blocking",
+"pthread_rwlock_rdlock - not available, blocks",,"psxtmtest_blocking","Yes"
 "pthread_rwlock_tryrdlock - available","psxtmrwlock01","psxtmtest_single","Yes"
 "pthread_rwlock_tryrdlock - not available",,"psxtmtest_single",
 "pthread_rwlock_timedrdlock - available","psxtmrwlock01","psxtmtest_single","Yes"
